[gd_scene load_steps=5 format=3 uid="uid://c75gt0qjodun5"]

[ext_resource type="Script" path="res://ui/main/main_menu.gd" id="1_8wp5i"]
[ext_resource type="PackedScene" uid="uid://brjt7p30rj5we" path="res://ui/cached_file_dialog/cached_file_dialog.tscn" id="2_nb5x8"]
[ext_resource type="PackedScene" uid="uid://byggwvgy1weio" path="res://3d/editor_viewport/editor_viewport.tscn" id="2_u2tc1"]
[ext_resource type="PackedScene" uid="uid://ds14rfyke1tml" path="res://3d/mc_model/mc_model.tscn" id="3_sdhs6"]

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_8wp5i")

[node name="EditorViewport" parent="." instance=ExtResource("2_u2tc1")]

[node name="McModel" parent="." instance=ExtResource("3_sdhs6")]

[node name="CachedFileDialogModel" parent="." instance=ExtResource("2_nb5x8")]
memory_group = "model"

[node name="CachedFileDialogTexture" parent="." instance=ExtResource("2_nb5x8")]
memory_group = "texture"

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 110.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "scene_mode"

[node name="ButtonLoadModel" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Load model"

[node name="ButtonLoadTexture" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Load Texture"

[connection signal="file_selected" from="CachedFileDialogModel" to="." method="_on_cached_file_dialog_model_file_selected"]
[connection signal="file_selected" from="CachedFileDialogTexture" to="." method="_on_cached_file_dialog_texture_file_selected"]
[connection signal="pressed" from="GridContainer/ButtonLoadModel" to="." method="_on_button_load_model_pressed"]
[connection signal="pressed" from="GridContainer/ButtonLoadTexture" to="." method="_on_button_load_texture_pressed"]
